prover-ray/zkcdriver/testdata/synced/invalid/call_05.zkc
//error:3:7-11:expected type u8
fn f(x:u8) -> (r:u8) {
  r = g(x)
  return
}

fn g(x:u8) -> (z:u16) {
   z = x as u16
   return
}
